syntax = "proto3";

import "input_mode.proto";

package api.shared;

message SwitchToModePayload {
  input_mode.InputModeMessage input_mode = 1;
}

message PaneIdAndShouldFloat {
  uint32 pane_id = 1;
  bool should_float_if_hidden = 2;
}
